<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/descriptionCharacterImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/characterImage" />

        <TextView
            android:id="@+id/descriptionCharacterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/charName"
            android:textColor="@color/hero_item_textColor" />

        <TextView
            android:id="@+id/descriptionCharacterFilms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/charFilms"
            android:textColor="@color/hero_item_textColor" />

        <TextView
            android:id="@+id/descriptionCharacterShortFilms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/charShortFilms"
            android:textColor="@color/hero_item_textColor" />

        <TextView
            android:id="@+id/descriptionCharacterTvShows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/charTvShows"
            android:textColor="@color/hero_item_textColor" />

        <TextView
            android:id="@+id/descriptionCharacterVideoGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/charVideoGames"
            android:textColor="@color/hero_item_textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/charParkAttractions"
            android:textColor="@color/hero_item_textColor" />

        <TextView
            android:id="@+id/descriptionCharacterAllies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/charAllies"
            android:textColor="@color/hero_item_textColor" />

        <TextView
            android:id="@+id/descriptionCharacterEnemies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/charEnemies"
            android:textColor="@color/hero_item_textColor" />

        <TextView
            android:id="@+id/descriptionCharacterURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/charURL"
            android:textColor="@color/hero_item_textColor" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/backButton"
        style="@style/backButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="58dp"
        android:background="@drawable/bt_all_heroes"
        android:contentDescription="@string/backToList"
        android:src="@drawable/ic_arrow" />

    <ImageButton
        android:id="@+id/favButton"
        style="@style/favButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="end"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/bt_all_heroes"
        android:contentDescription="@string/addToFavourite"
        android:src="@drawable/ic_vector" />

    <ImageButton
        android:id="@+id/deleteButton"
        style="@style/deleteButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="end"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/bt_all_heroes"
        android:contentDescription="@string/deleteFromFavourite"
        android:src="@drawable/ic_trash"
        android:visibility="invisible" />

    <com.example.disneyHeroes.BannerView
        android:id="@+id/bannerView"
        android:layout_gravity="bottom"
        android:layout_marginBottom="100dp"
        android:visibility="gone"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>